--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="side-marging">
+        <div class="header-content">
+            <h2 class="mariweather-font">Happy New Year</h2>
+            <h1 class="mariweather-font">New Year Party<br>Celebration</h1>
+        </div>
+    </header>
+    <main>
+        <!-- Discount section -->
+        <section class="discount">
+            <div class="discount-offer">
+                <h1>65% OFF</h1>
+                <p>OUR HOLIDAY DEALS ARE BETTER</p>
+                <h2>ALL CATEGORIES</h2>
+            </div>
+            <div class="discount-img">
+                <img src="images/New Year Photo.png" alt="...">
+            </div>
+        </section>
+        <!-- Midnight party section -->
+         <section class="midnight side-marging">
+            <div class="midnight-content">
+                <h1 class="mariweather-font">Welcome to<br>midnight party</h1>
+                <p class="inter-font">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="join-btn inter-font">Join Now</button>
+            </div>
+         </section>
+    </main>
 </body>
 </html>
