--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
                 <button class="join-btn inter-font">Join Now</button>
             </div>
          </section>
+         <!-- Address section -->
+          <section class="address side-marging">
+            <div class="address-text">
+                <p><span class="span-color">Place:</span> New Park Hotel</p>
+                <p><span class="span-color">Date:</span> 31 December Night 2023</p>
+                <p><span class="span-color">Time:</span> Evening 7.30 pm to 12.30 am</p>
+            </div>
+            <button>Join Now</button>
+          </section>
+        <!-- Coming soon section -->
+         <section class="coming-soon side-marging">
+            <div class="coming-soon-1">
+                <h3>NEW BEST OFFER</h3>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="coming-soon-2">
+                <img src="images/Ellipse 1.png" alt="...">
+            </div>
+            <div class="coming-soon-3">
+                <h1>2024</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="...">
+            </div>
+         </section>
     </main>
 </body>
 </html>
